# asimov-cli

./: AUTHORS  CHANGES.md  CITATION.cff  Cargo.toml  README.md
.github/: codeowners
.github/workflows/: ci.yaml  release.yaml
src/: commands.rs  features.rs  lib.rs  main.rs  shared.rs
src/commands/: ask.rs  describe.rs  external.rs  fetch.rs  help.rs  help_cmd.rs  import.rs  index.rs  list.rs  module.rs  read.rs  search.rs  snap.rs
src/commands/module/: browse.rs  config.rs  disable.rs  enable.rs  find.rs  inspect.rs  install.rs  link.rs  list.rs  resolve.rs  uninstall.rs  upgrade.rs
src/commands/snapshot/: compact.rs  list.rs  log.rs  snapshot.rs
src/registry/: crates.rs
tests/: execute_external.rs  execute_help_cmd.rs  find.rs  list.rs  shared.rs
