# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-cli"
version = "25.0.0-dev.11"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV Command-Line Interface (CLI)"
#documentation = ""
readme = true
homepage = "https://cli.asimov.sh"
repository = "https://github.com/asimov-platform/asimov-cli"
license = "Unlicense"
keywords = ["asimov", "ai", "cli"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[features]
default = ["all"]
all = ["fetch", "list", "snap"]
unstable = ["describe", "index", "read", "search"]

# Optional features:
describe = []
fetch = ["dep:asimov-proxy"]
index = []
list = []
read = []
search = []
snap = ["dep:asimov-snapshot"]

[build-dependencies]
cfg_aliases = "0.2"
shadow-rs = { version = "1.3", features = [
    "build",
    "tzdb",
], default-features = false }
cc = "1.2"

[dev-dependencies]
temp-dir = "0.1"
indoc = "2.0"

[dependencies]
asimov-env = "25.0.0-dev.21"
asimov-module = "25.0.0-dev.21"
asimov-patterns = "25.0.0-dev.21"
asimov-registry = "25.0.0-dev.21"
asimov-runner = "25.0.0-dev.21"
asimov-snapshot = { version = "25.0.0-dev.21", optional = true }
clap = { version = "4.5", default-features = false }
clientele = { version = "0.3.8", features = ["gofer"] }
color-print = "=0.3.7"
rayon = "1.11"
miette = { version = "7.5", features = ["fancy"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2.5"

# Optional dependencies:
asimov-proxy = { version = "25.0.0-dev.22", optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov"
path = "src/main.rs"
