# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-cli"
version = "25.0.0-dev.13"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV Command-Line Interface (CLI)"
#documentation = ""
readme = true
homepage = "https://cli.asimov.sh"
repository = "https://github.com/asimov-platform/asimov-cli"
license = "Unlicense"
keywords = ["asimov", "ai", "cli"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[features]
default = ["all"]
all = ["ask", "fetch", "list", "read", "snap"]
unstable = ["describe", "index", "search"]

# Optional features:
ask = []
describe = []
fetch = ["dep:asimov-proxy"]
index = []
list = []
read = ["dep:infer", "dep:mime"]
search = []
snap = ["dep:asimov-snapshot"]

[build-dependencies]
cfg_aliases = "0.2"
shadow-rs = { version = "1.4", features = [
  "build",
  "tzdb",
], default-features = false }
cc = "1.2"

[dev-dependencies]
temp-dir = "0.1"
indoc = "2.0"

[dependencies]
asimov-env = "25.0.0-dev.24"
asimov-module = "25.0.0-dev.24"
asimov-patterns = "25.0.0-dev.24"
asimov-registry = "25.0.0-dev.24"
asimov-runner = "25.0.0-dev.24"
asimov-snapshot = { version = "25.0.0-dev.24", optional = true }
clap = { version = "4.5", default-features = false }
clientele = { version = "0.3.8", features = ["gofer"] }
color-print = "=0.3.7"
miette = { version = "7.5", features = ["fancy"] }
rayon = "1.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2.5"

# Optional dependencies:
asimov-proxy = { version = "25.0.0-dev.24", optional = true }
infer = { version = "0.19", optional = true }
mime = { version = "0.3", optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov"
path = "src/main.rs"
